--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,8 +5,8 @@
 }
 
 body{
-    background-color: teal;
-    min-height: 100vh;
+    background-color: whitesmoke;
+    min-height: 110vh;
 }
 
 
@@ -87,16 +87,100 @@ nav{
     color: white;
 }
 
-main{
+.outerContainer{
     width: 100%;
-    height: 100%;
-    background-color: rebeccapurple;
+    min-height: 100vh;
+    position: relative;
 }
 
-.blogArticles{
+.ArticleOuterContainer{
     width: 70%;
+    height: auto;
+    min-height: 100%;
+}
+
+.adsContainer{
+    width: 30%;
+    height: auto;
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+}
+
+.adsContainer a{
+    width: 50%;
+}
+
+.adsContainer img{
+    width: 100%;
+    object-fit: contain;
+    margin: 20px auto;
+}
+
+.ArticleContainer{
+    width: 100%;
+    height: 30%;
+    background-color: white;
+    margin: 10px 0px;
+    border-radius: 1%;
+}
+
+.articleHeader{
+    height: 30%;
+    font-size: 30px;
+}
+
+.article{
+    width: 100%;
+    height: 70%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.article img{
     height: 100%;
-    background-color: lightgrey;
+    object-fit: contain;
+    border-radius: 5%;
+}
+
+.article p{
+    width: 80%;
+    font-size:20px;
+    padding: 0px 2px;
+    
+}
+
+
+@media only screen and (max-width: 1000px){
+
+    .articleHeader{
+        height: 25%;
+        font-size: 22px;
+    }
+
+    .article p{
+        width: 80%;
+        font-size: 18px;
+    }
+
+}
+
+@media only screen and (max-width: 800px){
+    .adsContainer{
+        display: none;  
+    }
+
+    .ArticleOuterContainer{
+        width: 100%;
+        height: auto;
+        min-height: 100%;
+    }
 }
 
 
@@ -116,6 +200,17 @@ main{
     .introContainer h1{
         font-size: 32px;
     }
+
+    .articleHeader{
+        height: 30%;
+        font-size: 20px;
+    }
+
+    .article p{
+        width: 80%;
+        font-size: 14px;
+        padding: 0px 3px;  
+    }
 }
 
 @media only screen and (max-width: 400px){
@@ -131,5 +226,40 @@ font-size: 12px;
 .introContainer h1{
     font-size: 22px;
 }
+
+.articleHeader{
+    height: auto;
+    font-size: 18px;
+}
+
+.article p{
+    width: 95%;
+    font-size: 14px;
+    padding: 0px 2px;
+    margin: 10px 0px;  
+}
+
+.article{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+}
+
+.article img{
+    height: 30%;
+    object-fit: contain;
+    border-radius: 5%;
+    margin: 10px 0px;
+}
+
+.ArticleContainer{
+    width: 100%;
+    height: auto;
+}
+
+
 
 }
